# M33tings

./: .gitignore  README.md
client/: .eslintcache  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  firebase.ts  index.css  index.tsx
client/src/hooks/: use-dispatch.ts  use-http.ts  use-selector.ts
client/src/models/: Event.ts  Participant.ts  Ui.ts  User.ts
client/src/pages/: LoginPage.tsx  MeetingsPage.tsx  NewMeetingPage.tsx  ProfilePage.tsx  SignupPage.tsx
client/src/store/: auth-actions.ts  auth-actions.tsx  auth-context.tsx  auth-slice.ts  auth-slice.tsx  event-actions.ts  event-slice.ts  index.ts  index.tsx  message-slice.ts  ui-slice.ts
client/src/utils/: config.ts  normalize.css  variables.css
diagrams/: erd.plantuml
meetings-api/: Cargo.toml
meetings-api/migrations/: 20211219213131_initial.sql
meetings-api/src/: handlers.rs  main.rs  models.rs
meetings-api/src/lib/: error.rs
meetings-api/src/repo/: event_repo.rs  mod.rs
meetings-app/: .eslintcache  package-lock.json  package.json
meetings-app/src/: App.tsx  index.css
meetings-app/src/hooks/: use-http.ts  use-input.ts
meetings-app/src/pages/: ForgotPasswordPage.tsx  LoginPage.tsx  MeetingsPage.tsx  SignupPage.tsx
meetings-app/src/store/: auth-context.tsx
meetings-app/src/utils/: variables.css
server/: Dockerfile  docker-compose.yml  package-lock.json  package.json
server/pgdata/: postmaster.pid
server/pgdata/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
server/sql/: create_tables.sql
server/src/: app.ts
(+182 files in other folders)
